force-app/main/default/objects/Table__c/fields/Aggregate_Field__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Field__c</fullName>
    <label>Aggregate Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>