force-app/main/default/objects/Table__c/fields/Col_Grouping_Fields__c.field-meta.xml
<CustomField>
    <fullName>Col_Grouping_Fields__c</fullName>
    <label>Col Grouping Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>