force-app/main/default/objects/Table__c/fields/Data_Load_Mode__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_Mode__c</fullName>
    <description>Mode for loading data (Standard, Virtual, Auto).</description>
    <label>Data Load Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>