force-app/main/default/objects/Table__c/fields/Empty_State_Illustration__c.field-meta.xml
<CustomField>
    <fullName>Empty_State_Illustration__c</fullName>
    <defaultValue>&quot;desert:empty_list&quot;</defaultValue>
    <description>The SLDS illustration name to show when no records are found (e.g., desert:empty_list, cart:noitems).</description>
    <label>Empty State Illustration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>