force-app/main/default/objects/Table__c/fields/Enable_Column_Manager__c.field-meta.xml
<CustomField>
    <fullName>Enable_Column_Manager__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the &quot;Columns&quot; button for managing visibility and order will be visible.</description>
    <label>Enable Column Manager</label>
    <type>Checkbox</type>
</CustomField>