force-app/main/default/objects/Table__c/fields/Enable_Export__c.field-meta.xml
<CustomField>
    <fullName>Enable_Export__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the &quot;Export&quot; button for CSV data will be visible.</description>
    <label>Enable Export</label>
    <type>Checkbox</type>
</CustomField>