force-app/main/default/objects/Table__c/fields/Enable_Filters__c.field-meta.xml
<CustomField>
    <fullName>Enable_Filters__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the filter panel and filter toggle button will be visible.</description>
    <label>Enable Filters</label>
    <type>Checkbox</type>
</CustomField>