force-app/main/default/objects/Table__c/fields/Enable_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Enable_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Grouping</label>
    <type>Checkbox</type>
</CustomField>