force-app/main/default/objects/Table__c/fields/Enable_Import__c.field-meta.xml
<CustomField>
    <fullName>Enable_Import__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the &quot;Import&quot; button for CSV data will be visible.</description>
    <label>Enable Import</label>
    <type>Checkbox</type>
</CustomField>