force-app/main/default/objects/Table__c/fields/Enable_Infinite_Scroll__c.field-meta.xml
<CustomField>
    <fullName>Enable_Infinite_Scroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable infinite scrolling for large datasets.</description>
    <label>Enable Infinite Scroll</label>
    <type>Checkbox</type>
</CustomField>