force-app/main/default/objects/Table__c/fields/Enable_Matrix_View__c.field-meta.xml
<CustomField>
    <fullName>Enable_Matrix_View__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the Matrix/Pivot mode toggle button will be visible.</description>
    <label>Enable Matrix View</label>
    <type>Checkbox</type>
</CustomField>