force-app/main/default/objects/Table__c/fields/Enable_New_Record__c.field-meta.xml
<CustomField>
    <fullName>Enable_New_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, a primary &quot;New&quot; button will be visible in the toolbar for creating new records.</description>
    <label>Enable New Record</label>
    <type>Checkbox</type>
</CustomField>