force-app/main/default/objects/Table__c/fields/Enable_Views__c.field-meta.xml
<CustomField>
    <fullName>Enable_Views__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the saved Views button will be visible.</description>
    <label>Enable Views</label>
    <type>Checkbox</type>
</CustomField>