force-app/main/default/objects/Table__c/fields/Hide_Row_Actions__c.field-meta.xml
<CustomField>
    <fullName>Hide_Row_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the standard per-row actions menu (View, Edit, Delete) will be hidden.</description>
    <label>Hide Row Actions</label>
    <type>Checkbox</type>
</CustomField>