force-app/main/default/objects/Table__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>