force-app/main/default/objects/Table__c/fields/Row_Grouping_Fields__c.field-meta.xml
<CustomField>
    <fullName>Row_Grouping_Fields__c</fullName>
    <label>Row Grouping Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>